[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/target_marker.png" type="Texture" id=1]
[ext_resource path="res://scripts/ui/position_indicator.gd" type="Script" id=2]
[ext_resource path="res://textures/target_marker_offscreen.png" type="Texture" id=3]

[node name="PositionIndicator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OnscreenMarker" type="NinePatchRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.834274
margin_right = -1042.0
margin_bottom = -576.834
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 8, 8 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffscreenMarker" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
